style.css
* {
  box-sizing: border-box; 
}

html {
  scroll-behavior: smooth;
}

body {
  font-family: Arial, Helvetica, sans-serif;
}

:root {
  --size: font-size: 1.5rem;
  --blue: rgba(102, 178, 255, 1);
  --violet: rgba(127, 0, 255, 1);
  --line: rgba(0, 0, 255, 1);
  --title: rgba(0, 0, 153, 1);
  --baground: rgba(27, 40, 216, 0.1);
}

@font-face {
  font-family: contacts;
  src: url('https://fonts.googleapis.com/css2?family=Montagu+Slab:wght@400;700&display=swap');
  font-family: title;
  src: url("https://fonts.googleapis.com/css2?family=Estonia&family=Montagu+Slab:wght@400;600&display=swap");
}

.wrapper {
  width: 70%;
  margin: auto;
  padding-top: 4rem;
  box-shadow: 0 2px 5px 10px rgba(192, 192, 192, 0.4), 0 3px 6px 15px rgba(192, 192, 192, 0.5), 0 4px 7px 20px rgba(192, 192, 192, 0.7);
}

.nav {
  position: fixed;
  top: 0;
  width: inherit;
  background-color: rgba(102, 178, 255, 0.5);
}

.nav__menu {
  display: flex;
  flex-wrap: nowrap;
  justify-content: space-evenly;
  align-items: center;
  height: 4rem;
}

.nav__item {
  position: relative;
  list-style: none;
}

.nav__link {
  font-size: 1.8em;
  text-decoration: none;
  text-transform: uppercase;
  color: var(--title);
}

.nav__link:visited {
  color: var(--title) ;
}

.nav__link::after {
  position: absolute;
  display: block;
  left: 0;
  width: 0;
  height: 3px;
  content: "";
  background-color: var(--line);
  transition: width 0.5s ease-out;
  -webkit-transition: width 0.5s ease-out;
  -moz-transition: width 0.5s ease-out;
  -ms-transition: width 0.5s ease-out;
  -o-transition: width 0.5s ease-out;
}

.nav__link:hover::after {
  width: 100%;
}

.nav__link:hover {
  animation: nav 1s ease-out;
  -webkit-animation: nav 1s ease-out;
  color: var(--violet);
}

@keyframes nav {
  0% {color: rgba(127, 0, 255, 0.2);}
  25% {color: rgba(127, 0, 255, 0.4);}
  50% {color: rgba(127, 0, 255, 0.6);}
  75% {color: rgba(127, 0, 255, 0.8);}
  100% {color: rgba(127, 0, 255, 1);}
}

.header {
  display: flex;
  flex-wrap: wrap;
}

.header__item {
  box-shadow: 1px 1px 5px var(--blue), 1px 1px 5px var(--blue);
}

.icon {
  flex: 0 1 auto;
}

.icon__img {
  max-width: 100%;
  height: auto;
}

.name {
  flex: 1 1 auto;
  padding-top: 60px;
  line-height: 4;
  text-align: center;
  background-color: var(--baground);
}

.name__name, 
.name__prof {
  font-family: title;
  font-size: 3.5em;
  font-weight:bold;
  text-transform: uppercase;
  color: var(--title);
  cursor: default;
}

.name__prof {
  font-size: 2.5em;
}

.header>*:last-child {
  flex: 1 1 100%;
}

.contacts {
  display: flex;
  flex-wrap: nowrap;
  align-items: center;
  height: 8rem;
  margin-top: 0.5rem;
  background-color: var(--baground);
}

.contacts__item {
  flex: 1 1 auto;
}

.contacts__item--container {
  display: flex;
  justify-content: center;
  align-items: center;
}

.contacts__link .contacts__img:hover {
  transform: scale(1.2);
  border-radius: 50%;
  -webkit-border-radius: 50%;
  -moz-border-radius: 50%;
  -ms-border-radius: 50%;
  -o-border-radius: 50%;
  box-shadow: 0px 0px 10px 8px var(--blue);
  -webkit-transform: scale(1.2);
  -moz-transform: scale(1.2);
  -ms-transform: scale(1.2);
  -o-transform: scale(1.2);
}

.contants__text {
  margin-left: 1rem;
  padding: 15px;
  font-family: contacts ;
  box-shadow: 5px 7px 10px var(--blue);
  cursor: default;
}

.main {
  display: grid;
  grid-template-columns: repeat( 4, 1fr);
  grid-gap: 0.5rem;
  margin-top: 0.5rem;
  background-color: var(--baground);
}

.main__item {
  padding: 2rem;
   box-shadow: 1px 1px 5px var(--blue), 1px 1px 5px var(--blue);
}

.skills {
  grid-area: 1/1/3/2;
  display: flex;
  flex-direction: column;
}

.main__title {
  margin-bottom: 4rem;
  padding: 2rem;
  font-family: title;
  font-weight: bold;
  font-size: 2.5em;
  text-transform: uppercase;
  border-left: 10px solid var(--violet);
  border-radius: 50%;
  -webkit-border-radius: 50%;
  -moz-border-radius: 50%;
  -ms-border-radius: 50%;
  -o-border-radius: 50%;
  color: var(--title);
  cursor: default;
}

.skills__items {
  display: flex;
  height: 100%;
  justify-content: space-between;
  flex-direction: column;
}

.skills__item-block {
  display: flex;
  justify-content: space-between;
}

.skills__text {
  width: 70%;
  padding: 1rem;
  font-size: 1.5em;
  text-align: center;
  background-image: linear-gradient(135deg, red , orange, yellow, green, blue, indigo, violet);
  opacity: 0.8;
  cursor: default;
}

.about-me {
  grid-area: 1/2/2/5;
}

.about-me__text,
.code__text {
  font-size: 1.5em;
  line-height: 2;
  cursor: default;
}

.code__text {
  position: relative;
}

.code__text::after {
  position: absolute;
  display: block;
  width: 50%;
  height: 1px;
  content: "";
  background-color: rgb(0, 0, 0);
}

.code {
  grid-area: 2/2/3/5;
}

.code__code {
  font-size: 1.5em;
  white-space: pre-line;
  cursor: default;
}

.project {
  grid-area: 3/1/4/5;	
}

.project__items {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
}

.project__item {
  position: relative;
  width: 320px;
  height: 242px;
  overflow: hidden;
  list-style: none;
  border-radius: 5%;
  -webkit-border-radius: 5%;
  -moz-border-radius: 5%;
  -ms-border-radius: 5%;
  -o-border-radius: 5%;
  box-shadow: 5px 7px 10px var(--blue);
  transition: all 0.5s ease-in-out;
  -webkit-transition: all 0.5s ease-in-out;
  -moz-transition: all 0.5s ease-in-out;
  -ms-transition: all 0.5s ease-in-out;
  -o-transition: all 0.5s ease-in-out;
}

.project__img {
  width: 100%;
  height: 100%;
  transition: all 0.5s ease-in-out;
  -webkit-transition: all 0.5s ease-in-out;
  -moz-transition: all 0.5s ease-in-out;
  -ms-transition: all 0.5s ease-in-out;
}

.project__img:hover {
  transform: rotate(-25deg) scale(1.5);
  -webkit-transform: rotate(-25deg) scale(1.5);
  -moz-transform: rotate(-25deg) scale(1.5);
  -ms-transform: rotate(-25deg) scale(1.5);
  -o-transform: rotate(-25deg) scale(1.5);
  transition: all 0.5s ease-in-out;
  -webkit-transition: all 0.5s ease-in-out;
  -moz-transition: all 0.5s ease-in-out;
  -ms-transition: all 0.5s ease-in-out;
  -o-transition: all 0.5s ease-in-out;
  opacity: 0.5;
}

.project__description {
  position: absolute;
  top: 50%;
  color: white;
  font-size: 2rem;
  font-weight: 600;
  color: var(--title);
  left: -80%;
  pointer-events: none;
  transition: all 0.5s ease-in-out;
  -webkit-transition: all 0.5s ease-in-out;
  -moz-transition: all 0.5s ease-in-out;
  -ms-transition: all 0.5s ease-in-out;
  -o-transition: all 0.5s ease-in-out;
}

.project__item:hover .project__description {
  left: 10%;
  transition: all 0.5s ease-in-out;
  -webkit-transition: all 0.5s ease-in-out;
  -moz-transition: all 0.5s ease-in-out;
  -ms-transition: all 0.5s ease-in-out;
  -o-transition: all 0.5s ease-in-out;
}

.project__description::after {
  position: absolute;
  display: block;
  content: '';
  height: 2rem;
  width: 0.3rem;
  left: -10%;
  top: 2%;
  background-color: var(--violet);
}

.project__item:hover {
  box-shadow: 0 0 25px var(--blue);
  transition: all 0.5s ease-in-out;
  -webkit-transition: all 0.5s ease-in-out;
  -moz-transition: all 0.5s ease-in-out;
  -ms-transition: all 0.5s ease-in-out;
  -o-transition: all 0.5s ease-in-out;
}

.education {
  grid-area: 4/1/5/5;	
}

.education__container {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  height: 400px;
  box-shadow: 1px 1px 5px var(--blue), 1px 1px 5px var(--blue);
}

.education__container:hover .education__title {
  animation: title-ducation 1s ease-in-out infinite;
  -webkit-animation: title-ducation 1s ease-in-out infinite;
}

.education__container:hover {
  box-shadow: 1px 1px 15px var(--blue), 1px 1px 15px var(--blue);
}

@keyframes title-ducation {
  0% { transform:scale(1.0) ; -webkit-transform:scale(1.0) ; -moz-transform:scale(1.0) ; -ms-transform:scale(1.0) ; -o-transform:scale(1.0) ; }
  50% { transform:scale(1.1) ; -webkit-transform:scale(1.1) ; -moz-transform:scale(1.1) ; -ms-transform:scale(1.1) ; -o-transform:scale(1.1) ; }
  100% { transform: scale(1.0); -webkit-transform: scale(1.0); -moz-transform: scale(1.0); -ms-transform: scale(1.0); -o-transform: scale(1.0); }
}
.education__education {
  align-self: flex-start;
  padding-left: 2rem;
  cursor: default;
}

.education__courses {
  align-self: center;
}

.education__language {
  align-self: flex-end;
  margin-right: 50px;
}

.list__link:hover {
  text-shadow: 2px 2px 2px var(--violet);
}

.education__text,
.list__item {
  font-size: 1.5em;
  line-height: 2;
}

.education__title {
  font-size: 2em;
  color: var(--title);
}

.education__title,
.education__list {
  cursor: default;
}

.list__item {
  padding-left: 50px;
}

.list__link {
  color: var(--violet);
}

.footer {
  display: flex;
  flex-wrap: nowrap;
  justify-content: space-evenly;
  align-items: center;
  background-color: rgba(102, 178, 255, 0.5);
}

.year {
  font-size: 1.5em;
  font-weight: 900;
  text-align: center;
  cursor: default;
}

.footer__img {
  transition: all 0.5s ease-in-out;
  -webkit-transition: all 0.5s ease-in-out;
  -moz-transition: all 0.5s ease-in-out;
  -ms-transition: all 0.5s ease-in-out;
  -o-transition: all 0.5s ease-in-out;
}

.footer__img:hover {
  transform: scale(1.1);
  -webkit-transform: scale(1.1);
  -moz-transform: scale(1.1);
  -ms-transform: scale(1.1);
  -o-transform: scale(1.1);
  transition: all 0.5s ease-in-out;
  -webkit-transition: all 0.5s ease-in-out;
  -moz-transition: all 0.5s ease-in-out;
  -ms-transition: all 0.5s ease-in-out;
  -o-transition: all 0.5s ease-in-out;
}

.copyright {
  display: flex;
  align-items: center;
  justify-content: center;
}

.copyright__text {
  padding: 0.7rem;
  font-weight: bold;
  text-transform:uppercase;
}

@media (max-width: 1024px) {
  .skills {
    grid-area: 1/1/2/5;
  }

  .about-me {
    grid-area: 2/1/3/5;
  }

  .code {
    grid-area: 3/1/4/5;
  }

  .project {
    grid-area: 4/1/5/5;	
  }

  .education {
    grid-area: 5/1/6/5;	
  }

  .skills__items {
    gap: 2rem;
  }
}

@media (max-width: 768px) {
  * {
    font-size: 10px;
  }
  .header {
    display: flex;
    flex-direction: column;
  }
  .icon {
    align-self: center;
    margin-bottom: 0.5rem;
    padding: 0 13%;
    background-color: var(--baground);
  }
  a,
  code {
    font-size: 14px;
  }
  .contants__text {
    display: none;
  }
}

@media (max-width: 1200px) {
  * {
    font-size: 12px;
  }
  .header {
    display: flex;
    flex-direction: column;
  }
  .icon {
    align-self: center;
    margin-bottom: 0.5rem;
    padding: 0 26%;
    background-color: var(--baground);
  }
  .contants__text {
    display: none;
  }
}

@media (max-width: 1440px) {
  * {
    font-size: 12px;
  }
  a,
  code {
    font-size: 16px;
  }

  .project__items {
    justify-content: center;
    gap: 2rem;
  }
}

